fixing x overflow on body and adding new global variables

--- a/public/global.css
+++ b/public/global.css
@@ -30,6 +30,8 @@
     #000000 100%
   );
 
+  --card-shadow: 0px 4px 16px rgba(0, 0, 0, 0.25);
+
   /* sizes */
 
   --medium: 500;
@@ -43,6 +45,7 @@
 
   /* spacing */
   --section-padding: 8rem;
+  --max-content-width: 1280px;
 
   --font-family: Inter, sans-serif;
 }
@@ -65,6 +68,8 @@ body {
   background: var(--dark);
   background-repeat: no-repeat;
   font-family: var(--font-family);
+
+  overflow-x: hidden;
 }
 
 /* TEXT */
